# grindlang

./: CLAUDE.md  Cargo.toml  PLAN.md  README.md  SPEC.md
benches/: grindlang.rs
examples/: embed.rs
src/: api.rs  ast.rs  capture.rs  diagnostics.rs  interp.rs  ir.rs  lexer.rs  lib.rs  parser.rs  resolve.rs  types.rs  value.rs
src/codegen/: mod.rs  rt.rs  translate.rs
src/runtime/: arena.rs  builtins.rs  host.rs  layout.rs  mod.rs  repr.rs
tests/: analyze_fixtures.rs  api.rs  interp_fixtures.rs  ir_differential.rs  jit_differential.rs  jit_fuzz.rs  parse_fixtures.rs  prop_differential.rs  resolve_fixtures.rs  runtime_abi.rs  serde_ir.rs  serde_value.rs  snapshots.rs
tests/fixtures/: closures.lua  dialog_decision.lua  stat_calc.lua
tests/snapshots/: snapshots__reject_bad_iterator.snap  snapshots__reject_labels.snap  snapshots__reject_repeat_until.snap  snapshots__reject_top_level_local.snap  snapshots__reject_top_level_statement.snap  snapshots__reject_varargs.snap  snapshots__signature_dialog_decision.snap  snapshots__signature_inline.snap  snapshots__signature_stat_calc.snap  snapshots__type_error_arith_on_string.snap  snapshots__type_error_inconsistent_returns.snap  snapshots__type_error_nil_arithmetic.snap
