[package]
name = "grindlang"
version = "0.1.0"
edition = "2024"
description = "A statically-typed, cranelift-JIT-compiled, Lua-syntax embedded calculation/decision language for Grindshell."
license = "MIT OR Apache-2.0"

[features]
# Default: the front end plus the reference interpreter. The cranelift JIT backend
# (Phase 7) is gated behind `jit` and its heavy deps are added when that phase lands.
default = ["interp"]

# Reference tree-walking interpreter (semantics oracle + debug execution).
interp = []

# Cranelift JIT backend (Phase 7). Compiles the typed IR to native code. The hybrid value
# model passes numbers/bools as unboxed f64/i8 and reference values as i64 handles into a
# per-call runtime context, so reference ops call back into the shared runtime — which uses
# `interp::Value`; hence `jit` implies `interp`.
jit = [
    "interp",
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
]

# serde marshaling of values / export signatures across process boundaries.
serde = ["dep:serde"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

cranelift-codegen = { version = "0.132", optional = true }
cranelift-frontend = { version = "0.132", optional = true }
cranelift-module = { version = "0.132", optional = true }
cranelift-jit = { version = "0.132", optional = true }
cranelift-native = { version = "0.132", optional = true }

[dev-dependencies]
# For the `serde` round-trip test (gated on the `serde` feature in the test itself).
serde_json = "1"

[[example]]
name = "embed"
required-features = ["jit"]
