[package]
name = "grindlang"
version = "0.1.0"
edition = "2024"
description = "A statically-typed, cranelift-JIT-compiled, Lua-syntax embedded calculation/decision language for Grindshell."
license = "MIT OR Apache-2.0"

[features]
# Default: the cranelift JIT backend — the primary, production execution path. `jit` is
# self-contained, so enabling only this feature yields a fully usable crate.
default = ["jit"]

# Reference tree-walking interpreter + IR VM: the semantics oracles and a debug execution
# mode. Independent of `jit` — enable it alongside `jit` to run the differential test suite.
interp = []

# Cranelift JIT backend. Compiles the typed IR to native code via a hybrid value model:
# numbers/bools pass as unboxed f64/i8 and reference values as i64 handles into a per-call
# runtime context. The shared runtime values (`value`) and builtin reference impls
# (`runtime`) it calls back into are compiled for any backend, so `jit` does NOT depend on
# `interp`.
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
]

# serde marshaling of values / export signatures across process boundaries.
serde = ["dep:serde"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

cranelift-codegen = { version = "0.132", optional = true }
cranelift-frontend = { version = "0.132", optional = true }
cranelift-module = { version = "0.132", optional = true }
cranelift-jit = { version = "0.132", optional = true }
cranelift-native = { version = "0.132", optional = true }

[dev-dependencies]
# For the `serde` round-trip test (gated on the `serde` feature in the test itself).
serde_json = "1"

[[example]]
name = "embed"
required-features = ["jit"]
