[package]
name = "grindlang"
version = "0.1.0"
edition = "2024"
description = "A statically-typed, cranelift-JIT-compiled, Lua-syntax embedded calculation/decision language for Grindshell."
license = "MIT OR Apache-2.0"

[features]
# Default: the cranelift JIT backend — the primary, production execution path. `jit` is
# self-contained, so enabling only this feature yields a fully usable crate.
default = ["jit"]

# Reference tree-walking interpreter + IR VM: the semantics oracles and a debug execution
# mode. Independent of `jit` — enable it alongside `jit` to run the differential test suite.
interp = []

# Cranelift JIT backend. Compiles the typed IR to native code via a hybrid value model:
# numbers/bools pass as unboxed f64/i8 and reference values as i64 handles into a per-call
# runtime context. The shared runtime values (`value`) and builtin reference impls
# (`runtime`) it calls back into are compiled for any backend, so `jit` does NOT depend on
# `interp`.
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
]

# serde marshaling of values / export signatures across process boundaries, and serde derives
# on the IR (`ir::Program`) so a compiled module can be cached to / loaded from disk (the CLI
# runner's `--cache`). `serde_json` is the on-disk format.
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

cranelift-codegen = { version = "0.132", optional = true }
cranelift-frontend = { version = "0.132", optional = true }
cranelift-module = { version = "0.132", optional = true }
cranelift-jit = { version = "0.132", optional = true }
cranelift-native = { version = "0.132", optional = true }

[dev-dependencies]
# Phase 9 hardening/tooling. (`serde_json` is a normal optional dep enabled by the `serde`
# feature — see `[dependencies]` — and is what the `serde` round-trip test marshals through.)
criterion = "0.5"           # benchmarks (benches/grindlang.rs)
proptest = "1"              # property-based differential testing (tests/prop_differential.rs)
insta = "1"                 # golden snapshots (tests/snapshots.rs)
# Rough Luau baseline in the benchmarks. Luau (not stock Lua), matching the rest of
# Grindshell (dialogmark/editor use mlua + Luau).
mlua = { version = "0.11", features = ["luau-jit"] }

[[bin]]
# CLI runner: compiles a script and calls an entry export (`main` by default), caching the
# lowered IR to disk (pyc-style) by default. Needs `jit` (the cranelift backend) and `serde`
# (the IR's on-disk serialization is intrinsic to the default-on cache), so it is excluded from
# builds lacking either. Run/build it with `--features serde`.
name = "grindlang"
required-features = ["jit", "serde"]

[[example]]
name = "embed"
required-features = ["jit"]

# Phase 9 benchmarks. The interp-vs-jit comparison inside is `#[cfg(feature = "interp")]`;
# run `cargo bench --features interp` to include it. The Luau baseline always runs.
[[bench]]
name = "grindlang"
harness = false
required-features = ["jit"]
